@@ -1,7 +1,5 @@
 package org.synyx.urlaubsverwaltung.core.workingtime;
 
-import com.google.common.base.Predicate;
-import com.google.common.collect.FluentIterable;
 import org.joda.time.DateMidnight;
 import org.joda.time.Interval;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -17,12 +15,12 @@ import org.synyx.urlaubsverwaltung.core.sicknote.SickNoteDAO;
 import java.util.ArrayList;
 import java.util.List;
 
+import static java.util.stream.Collectors.toList;
+
 
 /**
  * This service handles the validation of {@link Application} for leave concerning overlapping, i.e. if there is already
  * an existent {@link Application} for leave in the same period, the user may not apply for leave in this period.
- *
- * @author  Aljona Murygina - murygina@synyx.de
  */
 @Service
 public class OverlapService {
@@ -54,15 +52,9 @@ public class OverlapService {
                 application.getDayLength());
 
         if (!application.isNew()) {
-            applications = FluentIterable.from(applications).filter(new Predicate<Application>() {
-
-                            @Override
-                            public boolean apply(Application input) {
-
-                                // the same application for leave should not be recognized as overlapping
-                                return input.getId() != null && !input.getId().equals(application.getId());
-                            }
-                        }).toList();
+            applications = applications.stream()
+                .filter(input -> input.getId() != null && !input.getId().equals(application.getId()))
+                .collect(toList());
         }
 
         List<SickNote> sickNotes = getRelevantSickNotes(person, startDate, endDate);
@@ -90,15 +82,9 @@ public class OverlapService {
         List<SickNote> sickNotes = getRelevantSickNotes(person, startDate, endDate);
 
         if (!sickNote.isNew()) {
-            sickNotes = FluentIterable.from(sickNotes).filter(new Predicate<SickNote>() {
-
-                            @Override
-                            public boolean apply(SickNote input) {
-
-                                // the same sick note should not be recognized as overlapping
-                                return input.getId() != null && !input.getId().equals(sickNote.getId());
-                            }
-                        }).toList();
+            sickNotes = sickNotes.stream()
+                .filter(input -> input.getId() != null && !input.getId().equals(sickNote.getId()))
+                .collect(toList());
         }
 
         return getOverlapCase(startDate, endDate, applications, sickNotes);
@@ -168,25 +154,21 @@ public class OverlapService {
                 startDate.toDate(), endDate.toDate(), person);
 
         // remove the non-relevant ones
-        return FluentIterable.from(applicationsForLeave).filter(new Predicate<Application>() {
+        return applicationsForLeave.stream().filter(input -> {
 
-                        @Override
-                        public boolean apply(Application input) {
+            // only waiting and allowed applications for leave are relevant
+            boolean isWaitingOrAllowed = input.hasStatus(ApplicationStatus.WAITING)
+                || input.hasStatus(ApplicationStatus.ALLOWED);
 
-                            // only waiting and allowed applications for leave are relevant
-                            boolean isWaitingOrAllowed = input.hasStatus(ApplicationStatus.WAITING)
-                                || input.hasStatus(ApplicationStatus.ALLOWED);
+            // if only half day, then only the same time of day and full day is relevant
+            if (!DayLength.FULL.equals(dayLength)) {
+                boolean isOverlappingDayLength = input.getDayLength().equals(dayLength)
+                    || input.getDayLength().equals(DayLength.FULL);
+                return isWaitingOrAllowed && isOverlappingDayLength;
+            }
 
-                            // if only half day, then only the same time of day and full day is relevant
-                            if (!DayLength.FULL.equals(dayLength)) {
-                                boolean isOverlappingDayLength = input.getDayLength().equals(dayLength)
-                                        || input.getDayLength().equals(DayLength.FULL);
-                                return isWaitingOrAllowed && isOverlappingDayLength;
-                            }
-
-                            return isWaitingOrAllowed;
-                        }
-                    }).toList();
+            return isWaitingOrAllowed;
+        }).collect(toList());
     }
 
 
@@ -205,14 +187,7 @@ public class OverlapService {
         List<SickNote> sickNotes = sickNoteDAO.findByPersonAndPeriod(person, startDate.toDate(), endDate.toDate());
 
         // filter them since only active sick notes are relevant
-        return FluentIterable.from(sickNotes).filter(new Predicate<SickNote>() {
-
-                        @Override
-                        public boolean apply(SickNote input) {
-
-                            return input.isActive();
-                        }
-                    }).toList();
+        return sickNotes.stream().filter(SickNote::isActive).collect(toList());
     }
 
 
@@ -226,7 +201,7 @@ public class OverlapService {
      *
      * @return  {@link List} of overlap intervals
      */
-    private List<Interval> getListOfOverlaps(DateMidnight startDate, DateMidnight endDate,
+    public List<Interval> getListOfOverlaps(DateMidnight startDate, DateMidnight endDate,
         List<Application> applicationsForLeave, List<SickNote> sickNotes) {
 
         Interval interval = new Interval(startDate, endDate);
